# Max-Python-Bot

./: .gitignore  README.md  mock_crm.py  pyproject.toml  requirements.txt
app/: config.py  logging_config.py  main.py  webhook_main.py
app/handlers/: callbacks.py  commands.py  fallback.py
app/infrastructure/: crm_client.py  http_client.py  max_client.py
app/repositories/: memory_sessions.py
app/schemas/: common.py  crm.py  messages.py  session.py  updates.py
app/services/: consultation_flow.py  dispatcher.py  polling.py  ui.py
