[project]
name = "max-python-bot"
version = "0.1.0"
description = "Simple MAX bot on Python"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py312"]